[gd_scene load_steps=6 format=3 uid="uid://dfeb48jdhn3uu"]

[ext_resource type="Script" path="res://scripts/spy_ship.gd" id="1_wn26v"]

[sub_resource type="BoxShape3D" id="BoxShape3D_lgdqb"]

[sub_resource type="PrismMesh" id="PrismMesh_pdosl"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_y7gpy"]
albedo_color = Color(0.607843, 1, 0.309804, 1)

[sub_resource type="CylinderShape3D" id="CylinderShape3D_vckwf"]
radius = 7.5

[node name="SpyShip" type="CharacterBody3D" groups=["enemy", "spy_ship"]]
collision_layer = 2
collision_mask = 5
script = ExtResource("1_wn26v")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("BoxShape3D_lgdqb")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 0.5, 0, -1, -2.18557e-08, 0, 0, 0)
mesh = SubResource("PrismMesh_pdosl")
surface_material_override/0 = SubResource("StandardMaterial3D_y7gpy")

[node name="DetectionArea" type="Area3D" parent="."]
collision_layer = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="DetectionArea"]
shape = SubResource("CylinderShape3D_vckwf")

[node name="RetreatTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[connection signal="body_entered" from="DetectionArea" to="." method="_on_detection_area_body_entered"]
[connection signal="timeout" from="RetreatTimer" to="." method="_on_retreat_timer_timeout"]
